Alignment issue

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -182,7 +182,7 @@ button {
 
 .download-resume-button {
   position: fixed;
-  right: 10px;
-  top: 10px;
+  right: 20px;
+  top: 20px;
   z-index: 9999;
 }
